Fix scrollbar showing unexpectedly

--- a/client/src/components/App/App.css
+++ b/client/src/components/App/App.css
@@ -1,4 +1,4 @@
 html {
-  overflow: hidden;
+  overflow: auto;
   background: #eee;
 }
